--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -252,8 +252,8 @@ footer{
 
 <header>
   <div class="container nav">
-    <div class="brand">Elite Restaurant</div>
-    <a href="#contact" class="btn">Get this website</a>
+    <div class="brand">GalaStudio • Demo</div>
+<a href="#contact" class="btn">Get your website</a>
   </div>
 </header>
 
@@ -306,15 +306,17 @@ footer{
 <section id="contact" class="section">
   <div class="cta">
     <h2>Would you like a website like this for your restaurant?</h2>
-    <p>This is a demo. The design can be fully customized.</p>
-    <a href="mailto:your@email.com" class="btn">Contact me</a>
+    <p>Demo website by GalaStudio. Design and content can be fully customized.</p>
+    <a href="mailto:info.galastudio.web@gmail.com?subject=Website%20Inquiry" class="btn">
+      Contact GalaStudio
+    </a>
   </div>
 </section>
 
 </main>
 
 <footer>
-  © <span id="year"></span> Premium Restaurant Demo
+  © <span id="year"></span> GalaStudio — Demo Website
 </footer>
 
 <script>
@@ -326,9 +328,11 @@ document.getElementById("year").textContent = new Date().getFullYear();
   <a href="https://wa.me/573000000000" target="_blank" title="WhatsApp">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
-  <a href="mailto:your@email.com" title="Email">
+
+  <a href="mailto:info.galastudio.web@gmail.com?subject=Website%20Inquiry" title="Email">
     <i class="fa-solid fa-envelope"></i>
   </a>
+
   <a href="#" class="social" title="Instagram">
     <i class="fa-brands fa-instagram"></i>
   </a>
